# Sourav-Gen-AI-Project-For-Accenture

./: create_query.py  create_vector.py  pyproject.toml
DB/: chroma.sqlite3
